--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
+//apply plugin: 'io.fabric'
 apply plugin: 'findbugs'
-
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -75,67 +74,65 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile project(':advanced_recycler')
+    implementation project(':advanced_recycler')
 
     // Recommended
-    compile(project(':bottomsheetpickers'))
-    compile project(':materialdrawer') // For drawer layout
-    compile project(':filepicker')
-    compile project(':slideview')
-    compile project(':crystalrangeseekbar')
-    compile project(':fabmenu')
+    implementation(project(':bottomsheetpickers'))
+    implementation project(':materialdrawer') // For drawer layout
+    implementation project(':filepicker')
+    implementation project(':slideview')
+    implementation project(':crystalrangeseekbar')
+    implementation project(':fabmenu')
 
-    compile "com.android.support:cardview-v7:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
+    implementation 'com.google.android.gms:play-services-auth:11.0.4'
+    implementation 'com.google.android.gms:play-services-places:11.0.4'
+    implementation 'com.google.android.gms:play-services-location:11.0.4'
 
-    compile 'com.google.android.gms:play-services-auth:11.0.4'
-    compile 'com.google.android.gms:play-services-places:11.0.4'
-    compile 'com.google.android.gms:play-services-location:11.0.4'
-
-    compile('com.github.hotchemi:permissionsdispatcher:2.4.0') {
+    implementation('com.github.hotchemi:permissionsdispatcher:2.4.0') {
         // if you don't use android.app.Fragment you can exclude support for them
         exclude module: "support-v13"
     }
 
-    compile 'joda-time:joda-time:2.9.9'
-    compile 'com.google.code.gson:gson:2.8.2'
-    //compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'dev.dworks.libs:volleyplus:+'
+    implementation 'joda-time:joda-time:2.9.9'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    //implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'dev.dworks.libs:volleyplus:+'
 
-    compile 'com.android.support.constraint:constraint-layout:1.1.3'
-    compile 'com.android.support:multidex:1.0.3'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.3.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.3.1'
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
 
-    compile('com.github.ozodrukh:CircularReveal:1.1.1@aar') {
+    implementation('com.github.ozodrukh:CircularReveal:1.1.1@aar') {
         transitive = true;
     }
-    compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+    implementation 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
 
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
 
-    compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
         transitive = true;
     }
 
-    compile 'com.thebluealliance:spectrum:0.7.1'
+    implementation 'com.thebluealliance:spectrum:0.7.1'
 
-   // compile "net.gotev:uploadservice:3.4.2"
+   // implementation "net.gotev:uploadservice:3.4.2"
 
     //job creator for latest version instead services
-    compile 'com.evernote:android-job:1.2.6'
-    compile project(path: ':smartPenCore')
+    implementation 'com.evernote:android-job:1.2.6'
+    implementation project(path: ':smartPenCore')
 
 }
 
