--- a/fabmenu/build.gradle
+++ b/fabmenu/build.gradle
@@ -25,13 +25,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "com.android.support:appcompat-v7:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
-    compile "com.android.support:design:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
-    testCompile 'junit:junit:4.12'
+    implementation "com.android.support:appcompat-v7:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
+    implementation "com.android.support:design:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
+    testImplementation 'junit:junit:4.12'
 }
 
 // build a jar with source files
@@ -44,7 +44,7 @@ task javadoc(type: Javadoc) {
     failOnError  false
     source = android.sourceSets.main.java.sourceFiles
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    classpath += configurations.compile
+    classpath += configurations.implementation
 }
 
 // build a jar with javadoc
